@@ -8,30 +8,32 @@ import org.springframework.batch.core.JobExecution;
 import org.springframework.batch.core.StepExecution;
 import org.springframework.batch.core.explore.JobExplorer;
 import org.springframework.batch.core.launch.JobOperator;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
+import java.sql.Timestamp;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
 public class BatchService {
 
-    private final JobExplorer jobExplorer;
-    private final JobOperator jobOperator; // 배치 중지를 위해 필요
     private static final String JOB_NAME = "memberFeatureJob";
 
+    private final JobExplorer jobExplorer;
+    private final JobOperator jobOperator;
+    private final JdbcTemplate jdbcTemplate;
 
     public BatchStatusDetailResponse getBatchDetailStatusByCustomId(String customBatchId) {
-        // 최근 실행된 인스턴스들에서 해당 batchId 파라미터를 가진 실행 건 찾기
+        Optional<BatchStatusDetailResponse> managed = findManagedRun(customBatchId);
+        if (managed.isPresent()) return managed.get();
+
         JobExecution targetExecution = findExecutionByCustomId(customBatchId);
-
-        if (targetExecution == null) return null;
-
-        return convertToDetailResponse(targetExecution);
+        return targetExecution == null ? null : convertToDetailResponse(targetExecution);
     }
 
-   // 배치 중지
     public boolean stopJobByCustomId(String customBatchId) throws Exception {
         JobExecution targetExecution = findExecutionByCustomId(customBatchId);
         if (targetExecution != null && targetExecution.isRunning()) {
@@ -40,61 +42,136 @@ public class BatchService {
         return false;
     }
 
-    // 전체 실행 이력 조회
     public BatchHistoryListResponse getBatchHistory() {
-        List<JobExecution> executions = jobExplorer.getJobInstances(JOB_NAME, 0, 30).stream()
-                .flatMap(instance -> jobExplorer.getJobExecutions(instance).stream())
-                .collect(Collectors.toList());
+        LocalDateTime lastSuccess = lastSuccessfulCompletion();
+        List<BatchHistoryItem> managedRuns = jdbcTemplate.query("""
+                SELECT batch_id, run_type, feature_base_date, status,
+                       window_start_at, window_end_at, target_count,
+                       feature_success_count, failure_count, model_version,
+                       started_at, completed_at
+                FROM analytics_batch_run
+                ORDER BY started_at DESC
+                LIMIT 30
+                """, (resultSet, rowNumber) -> BatchHistoryItem.builder()
+                .batchId(resultSet.getString("batch_id"))
+                .featureBaseDate(resultSet.getDate("feature_base_date").toLocalDate().toString())
+                .batchStatus(resultSet.getString("status"))
+                .runType(resultSet.getString("run_type"))
+                .windowStartAt(toLocalDateTime(resultSet.getTimestamp("window_start_at")))
+                .windowEndAt(toLocalDateTime(resultSet.getTimestamp("window_end_at")))
+                .targetCount(resultSet.getLong("target_count"))
+                .successCount(resultSet.getLong("feature_success_count"))
+                .failureCount(resultSet.getLong("failure_count"))
+                .modelVersion(resultSet.getString("model_version"))
+                .startTime(toLocalDateTime(resultSet.getTimestamp("started_at")))
+                .endTime(toLocalDateTime(resultSet.getTimestamp("completed_at")))
+                .lastSuccessfulCompletion(lastSuccess)
+                .build());
 
-        List<BatchHistoryItem> batchList = executions.stream()
-                .map(ex -> BatchHistoryItem.builder()
-                        .batchId(ex.getJobParameters().getString("batchId", String.valueOf(ex.getId())))
-                        .featureBaseDate(ex.getJobParameters().getString("featureBaseDate"))
-                        .batchStatus(ex.getStatus().name())
-                        .startTime(ex.getStartTime())
-                        .endTime(ex.getEndTime())
+        if (!managedRuns.isEmpty()) {
+            return BatchHistoryListResponse.builder()
+                    .totalCount(managedRuns.size())
+                    .batchList(managedRuns)
+                    .build();
+        }
+
+        List<BatchHistoryItem> legacyRuns = jobExplorer.getJobInstances(JOB_NAME, 0, 30).stream()
+                .flatMap(instance -> jobExplorer.getJobExecutions(instance).stream())
+                .map(execution -> BatchHistoryItem.builder()
+                        .batchId(execution.getJobParameters()
+                                .getString("batchId", String.valueOf(execution.getId())))
+                        .featureBaseDate(execution.getJobParameters().getString("featureBaseDate"))
+                        .batchStatus(execution.getStatus().name())
+                        .startTime(execution.getStartTime())
+                        .endTime(execution.getEndTime())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return BatchHistoryListResponse.builder()
-                .totalCount(batchList.size())
-                .batchList(batchList)
+                .totalCount(legacyRuns.size())
+                .batchList(legacyRuns)
                 .build();
     }
-
 
     private JobExecution findExecutionByCustomId(String customBatchId) {
         return jobExplorer.getJobInstances(JOB_NAME, 0, 100).stream()
                 .flatMap(instance -> jobExplorer.getJobExecutions(instance).stream())
-                .filter(ex -> customBatchId.equals(ex.getJobParameters().getString("batchId")))
+                .filter(execution -> customBatchId.equals(
+                        execution.getJobParameters().getString("batchId")))
                 .findFirst()
                 .orElse(null);
     }
 
-
     private BatchStatusDetailResponse convertToDetailResponse(JobExecution jobExecution) {
-        Long totalTargetFromParam = jobExecution.getJobParameters().getLong("totalTargetCount", 0L);
-
         long readCount = 0;
         long writeCount = 0;
         long skipCount = 0;
-
-        for (StepExecution se : jobExecution.getStepExecutions()) {
-            readCount += se.getReadCount();
-            writeCount += se.getWriteCount();
-            skipCount += (se.getProcessSkipCount() + se.getWriteSkipCount());
+        for (StepExecution step : jobExecution.getStepExecutions()) {
+            readCount += step.getReadCount();
+            writeCount += step.getWriteCount();
+            skipCount += step.getProcessSkipCount() + step.getWriteSkipCount();
         }
 
         return BatchStatusDetailResponse.builder()
-                .batchId(jobExecution.getJobParameters().getString("batchId", String.valueOf(jobExecution.getId())))
+                .batchId(jobExecution.getJobParameters()
+                        .getString("batchId", String.valueOf(jobExecution.getId())))
                 .batchStatus(jobExecution.getStatus().name())
                 .featureBaseDate(jobExecution.getJobParameters().getString("featureBaseDate"))
-                .totalTargetCount(totalTargetFromParam)
+                .totalTargetCount(jobExecution.getJobParameters().getLong("totalTargetCount", 0L))
                 .processedCount(readCount)
                 .successCount(writeCount)
                 .failCount(skipCount)
                 .startTime(jobExecution.getStartTime())
                 .endTime(jobExecution.getEndTime())
                 .build();
+    }
+
+    private Optional<BatchStatusDetailResponse> findManagedRun(String batchId) {
+        List<BatchStatusDetailResponse> runs = jdbcTemplate.query("""
+                        SELECT batch_id, run_type, feature_base_date, status,
+                               window_start_at, window_end_at, target_count,
+                               feature_success_count, failure_count, model_version,
+                               started_at, completed_at
+                        FROM analytics_batch_run WHERE batch_id = ?
+                        """,
+                (resultSet, rowNumber) -> {
+                    long success = resultSet.getLong("feature_success_count");
+                    long failure = resultSet.getLong("failure_count");
+                    return BatchStatusDetailResponse.builder()
+                            .batchId(resultSet.getString("batch_id"))
+                            .batchStatus(resultSet.getString("status"))
+                            .featureBaseDate(resultSet.getDate("feature_base_date").toLocalDate().toString())
+                            .totalTargetCount(resultSet.getLong("target_count"))
+                            .processedCount(success + failure)
+                            .successCount(success)
+                            .failCount(failure)
+                            .startTime(toLocalDateTime(resultSet.getTimestamp("started_at")))
+                            .endTime(toLocalDateTime(resultSet.getTimestamp("completed_at")))
+                            .runType(resultSet.getString("run_type"))
+                            .windowStartAt(toLocalDateTime(resultSet.getTimestamp("window_start_at")))
+                            .windowEndAt(toLocalDateTime(resultSet.getTimestamp("window_end_at")))
+                            .modelVersion(resultSet.getString("model_version"))
+                            .lastSuccessfulCompletion(lastSuccessfulCompletion())
+                            .build();
+                },
+                batchId
+        );
+        return runs.stream().findFirst();
+    }
+
+    private LocalDateTime lastSuccessfulCompletion() {
+        return jdbcTemplate.query("""
+                        SELECT MAX(completed_at) AS completed_at
+                        FROM analytics_batch_run
+                        WHERE status IN ('READY', 'READY_WITH_ERRORS')
+                        """,
+                resultSet -> resultSet.next()
+                        ? toLocalDateTime(resultSet.getTimestamp("completed_at"))
+                        : null
+        );
+    }
+
+    private LocalDateTime toLocalDateTime(Timestamp timestamp) {
+        return timestamp == null ? null : timestamp.toLocalDateTime();
     }
 }
